# mediaforge

./: .gitignore  LICENSE  README.md  go.mod  go.sum  main.go
broker/: broker.go  rabbitmq.go
cmd/server/: main.go
ffmpegd/: CMakeLists.txt  Makefile  mp4.c
ffmpegd/include/: http.h  marshal.h  mp4.h  parse.h  rabbitmq.h  util.h
ffmpegd/src/: http.c  main.c  marshal.c  mp4.c  parse.c  rabbitmq.c  uuid.c
infra/rabbitmq/: rabbitmq-compose.yml
internal/convert/: handler.go  service.go
internal/infra/queue/: rabbitmq_client.go
internal/infra/storage/: minio_client.go
internal/util/: parse.go
storage/: minio_storage.go  storage.go
tests/: all_test.sh  all_upload_test.sh  basic_test.go  helper_test.go  upload.test.sh  upload_test.sh
